# so101-6dof-and-extended-versions

./: README.md
lerobot_robot_so101e/: README.md
lerobot_robot_so101e/lerobot_robot_so101e/: README.md  pyproject.toml
lerobot_robot_so101e/lerobot_robot_so101e/src/lerobot_robot_so101e/: __init__.py  _legacy.py  config_so101e_follower.py  so101e_follower.py
lerobot_robot_so101e/lerobot_teleoperator_so101e_leader/: README.md  pyproject.toml
lerobot_robot_so101e/lerobot_teleoperator_so101e_leader/src/lerobot_teleoperator_so101e_leader/: __init__.py  _legacy.py  config_so101e_leader.py  so101e_leader.py
